exports[`no-unsafe-promise-all-settled-values > invalid(1): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tprocess.exit((maybeThrow(), 1));\n\t\t} catch {\n\t\t\tcleanup();\n\t\t}\n\t}\n\n\treturn result.value;\n}); 1`] = `

   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			process.exit((maybeThrow(), 1));
   5 | 		} catch {
   6 | 			cleanup();
   7 | 		}
   8 | 	}
   9 |
  10 | 	return result.value;
  11 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(1): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tprocess.exit((maybeThrow(), 1));\n\t\t} catch {\n\t\t\tcleanup();\n\t\t}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			process.exit((maybeThrow(), 1));
   5 | 		} catch {
   6 | 			cleanup();
   7 | 		}
   8 | 	}
   9 |
> 10 | 	return result.value;
     | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  11 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(1): const values = (results as PromiseSettledResult<string>[]).map(result => result.value); 1`] = `

  1 | const values = (results as PromiseSettledResult<string>[]).map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(1): const values = (results as PromiseSettledResult<string>[]).map(result => result.value); 2`] = `

Message:
> 1 | const values = (results as PromiseSettledResult<string>[]).map(result => result.value);
    |                                                                          ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(1): declare const results: PromiseSettledResult<string>[]; const values = results.map(result => result.value); 1`] = `

Filename: file.ts

  1 | declare const results: PromiseSettledResult<string>[]; const values = results.map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(1): declare const results: PromiseSettledResult<string>[]; const values = results.map(result => result.value); 2`] = `

Message:
> 1 | declare const results: PromiseSettledResult<string>[]; const values = results.map(result => result.value);
    |                                                                                             ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(10): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tconst value = 1;\n\t\t\tswitch (value) {\n\t\t\t\tdefault:\n\t\t\t\t\tprocess.exit(1);\n\t\t\t\tcase 1:\n\t\t\t}\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 1`] = `

   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			const value = 1;
   5 | 			switch (value) {
   6 | 				default:
   7 | 					process.exit(1);
   8 | 				case 1:
   9 | 			}
  10 | 		} catch {}
  11 | 	}
  12 |
  13 | 	return result.value;
  14 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(10): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tconst value = 1;\n\t\t\tswitch (value) {\n\t\t\t\tdefault:\n\t\t\t\t\tprocess.exit(1);\n\t\t\t\tcase 1:\n\t\t\t}\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			const value = 1;
   5 | 			switch (value) {
   6 | 				default:
   7 | 					process.exit(1);
   8 | 				case 1:
   9 | 			}
  10 | 		} catch {}
  11 | 	}
  12 |
> 13 | 	return result.value;
     | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  14 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(11): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tclass Example {\n\t\t\t\tstatic {\n\t\t\t\t\tmaybeThrow();\n\t\t\t\t\tprocess.exit(1);\n\t\t\t\t}\n\t\t\t}\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 1`] = `

   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			class Example {
   5 | 				static {
   6 | 					maybeThrow();
   7 | 					process.exit(1);
   8 | 				}
   9 | 			}
  10 | 		} catch {}
  11 | 	}
  12 |
  13 | 	return result.value;
  14 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(11): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tclass Example {\n\t\t\t\tstatic {\n\t\t\t\t\tmaybeThrow();\n\t\t\t\t\tprocess.exit(1);\n\t\t\t\t}\n\t\t\t}\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			class Example {
   5 | 				static {
   6 | 					maybeThrow();
   7 | 					process.exit(1);
   8 | 				}
   9 | 			}
  10 | 		} catch {}
  11 | 	}
  12 |
> 13 | 	return result.value;
     | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  14 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(12): import process from 'node:process';\n\nconst values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\tprocess.exit(1);\n\t}\n\n\treturn result.value;\n}); 1`] = `

  1 | import process from 'node:process';
  2 |
  3 | const values = (await Promise.allSettled(promises)).map(result => {
  4 | 	if (result.status !== 'fulfilled') {
  5 | 		process.exit(1);
  6 | 	}
  7 |
  8 | 	return result.value;
  9 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(12): import process from 'node:process';\n\nconst values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\tprocess.exit(1);\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
  1 | import process from 'node:process';
  2 |
  3 | const values = (await Promise.allSettled(promises)).map(result => {
  4 | 	if (result.status !== 'fulfilled') {
  5 | 		process.exit(1);
  6 | 	}
  7 |
> 8 | 	return result.value;
    | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  9 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(13): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\tlabel: {\n\t\t\tbreak label;\n\t\t\tprocess.exit(1);\n\t\t}\n\t}\n\n\treturn result.value;\n}); 1`] = `

   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		label: {
   4 | 			break label;
   5 | 			process.exit(1);
   6 | 		}
   7 | 	}
   8 |
   9 | 	return result.value;
  10 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(13): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\tlabel: {\n\t\t\tbreak label;\n\t\t\tprocess.exit(1);\n\t\t}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		label: {
   4 | 			break label;
   5 | 			process.exit(1);
   6 | 		}
   7 | 	}
   8 |
>  9 | 	return result.value;
     | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  10 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(14): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\treport(() => process.exit(1));\n\t}\n\n\treturn result.value;\n}); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		report(() => process.exit(1));
  4 | 	}
  5 |
  6 | 	return result.value;
  7 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(14): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\treport(() => process.exit(1));\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		report(() => process.exit(1));
  4 | 	}
  5 |
> 6 | 	return result.value;
    | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  7 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(15): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\t(maybeThrow(), process.exit(1));\n\t\t} catch {\n\t\t\tcleanup();\n\t\t}\n\t}\n\n\treturn result.value;\n}); 1`] = `

   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			(maybeThrow(), process.exit(1));
   5 | 		} catch {
   6 | 			cleanup();
   7 | 		}
   8 | 	}
   9 |
  10 | 	return result.value;
  11 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(15): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\t(maybeThrow(), process.exit(1));\n\t\t} catch {\n\t\t\tcleanup();\n\t\t}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			(maybeThrow(), process.exit(1));
   5 | 		} catch {
   6 | 			cleanup();
   7 | 		}
   8 | 	}
   9 |
> 10 | 	return result.value;
     | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  11 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(16): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\t((maybeThrow(), process.exit(1)));\n\t\t} catch {\n\t\t\tcleanup();\n\t\t}\n\t}\n\n\treturn result.value;\n}); 1`] = `

   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			((maybeThrow(), process.exit(1)));
   5 | 		} catch {
   6 | 			cleanup();
   7 | 		}
   8 | 	}
   9 |
  10 | 	return result.value;
  11 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(16): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\t((maybeThrow(), process.exit(1)));\n\t\t} catch {\n\t\t\tcleanup();\n\t\t}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			((maybeThrow(), process.exit(1)));
   5 | 		} catch {
   6 | 			cleanup();
   7 | 		}
   8 | 	}
   9 |
> 10 | 	return result.value;
     | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  11 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(17): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tthrow error;\n\t\t\tprocess.exit(1);\n\t\t} catch {\n\t\t\tcleanup();\n\t\t}\n\t}\n\n\treturn result.value;\n}); 1`] = `

   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			throw error;
   5 | 			process.exit(1);
   6 | 		} catch {
   7 | 			cleanup();
   8 | 		}
   9 | 	}
  10 |
  11 | 	return result.value;
  12 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(17): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tthrow error;\n\t\t\tprocess.exit(1);\n\t\t} catch {\n\t\t\tcleanup();\n\t\t}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			throw error;
   5 | 			process.exit(1);
   6 | 		} catch {
   7 | 			cleanup();
   8 | 		}
   9 | 	}
  10 |
> 11 | 	return result.value;
     | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  12 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(18): const values = (await Promise.allSettled(promises)).map(result => result.value); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(18): const values = (await Promise.allSettled(promises)).map(result => result.value); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(result => result.value);
    |                                                                   ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(19): const values = (await Promise.allSettled(promises)).map(result => (result.value)); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => (result.value));

`;

exports[`no-unsafe-promise-all-settled-values > invalid(19): const values = (await Promise.allSettled(promises)).map(result => (result.value)); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(result => (result.value));
    |                                                                    ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(2): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\tconst process = customProcess;\n\t\tprocess.exit(1);\n\t}\n\n\treturn result.value;\n}); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		const process = customProcess;
  4 | 		process.exit(1);
  5 | 	}
  6 |
  7 | 	return result.value;
  8 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(2): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\tconst process = customProcess;\n\t\tprocess.exit(1);\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		const process = customProcess;
  4 | 		process.exit(1);
  5 | 	}
  6 |
> 7 | 	return result.value;
    | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  8 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(2): const values = (results as Array<PromiseSettledResult<string>>).map(result => result.value); 1`] = `

  1 | const values = (results as Array<PromiseSettledResult<string>>).map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(2): const values = (results as Array<PromiseSettledResult<string>>).map(result => result.value); 2`] = `

Message:
> 1 | const values = (results as Array<PromiseSettledResult<string>>).map(result => result.value);
    |                                                                               ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(2): declare const results: Array<PromiseSettledResult<string>>; const values = results.map(result => result.value); 1`] = `

Filename: file.ts

  1 | declare const results: Array<PromiseSettledResult<string>>; const values = results.map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(2): declare const results: Array<PromiseSettledResult<string>>; const values = results.map(result => result.value); 2`] = `

Message:
> 1 | declare const results: Array<PromiseSettledResult<string>>; const values = results.map(result => result.value);
    |                                                                                                  ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(20): const values = (await Promise.allSettled(promises)).map(result => result[\"value\"]); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => result["value"]);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(20): const values = (await Promise.allSettled(promises)).map(result => result[\"value\"]); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(result => result["value"]);
    |                                                                   ^^^^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(21): const values = (await Promise.allSettled(promises)).map(result => result?.value); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => result?.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(21): const values = (await Promise.allSettled(promises)).map(result => result?.value); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(result => result?.value);
    |                                                                   ^^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(22): const values = await Promise.allSettled(promises).then(results => results.map(result => result.value)); 1`] = `

  1 | const values = await Promise.allSettled(promises).then(results => results.map(result => result.value));

`;

exports[`no-unsafe-promise-all-settled-values > invalid(22): const values = await Promise.allSettled(promises).then(results => results.map(result => result.value)); 2`] = `

Message:
> 1 | const values = await Promise.allSettled(promises).then(results => results.map(result => result.value));
    |                                                                                         ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(23): const values = Promise.allSettled(promises).then(results => results.map(result => result.value)); 1`] = `

  1 | const values = Promise.allSettled(promises).then(results => results.map(result => result.value));

`;

exports[`no-unsafe-promise-all-settled-values > invalid(23): const values = Promise.allSettled(promises).then(results => results.map(result => result.value)); 2`] = `

Message:
> 1 | const values = Promise.allSettled(promises).then(results => results.map(result => result.value));
    |                                                                                   ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(24): const values = Promise.allSettled(promises).then(function (results) { return results.map(function (result) { return result.value; }); }); 1`] = `

  1 | const values = Promise.allSettled(promises).then(function (results) { return results.map(function (result) { return result.value; }); });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(24): const values = Promise.allSettled(promises).then(function (results) { return results.map(function (result) { return result.value; }); }); 2`] = `

Message:
> 1 | const values = Promise.allSettled(promises).then(function (results) { return results.map(function (result) { return result.value; }); });
    |                                                                                                                     ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(25): const results = await Promise.allSettled(promises); const values = results.map(result => result.value); 1`] = `

  1 | const results = await Promise.allSettled(promises); const values = results.map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(25): const results = await Promise.allSettled(promises); const values = results.map(result => result.value); 2`] = `

Message:
> 1 | const results = await Promise.allSettled(promises); const values = results.map(result => result.value);
    |                                                                                          ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(26): const results = (await Promise.allSettled(promises)); const values = results.map(result => result.value); 1`] = `

  1 | const results = (await Promise.allSettled(promises)); const values = results.map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(26): const results = (await Promise.allSettled(promises)); const values = results.map(result => result.value); 2`] = `

Message:
> 1 | const results = (await Promise.allSettled(promises)); const values = results.map(result => result.value);
    |                                                                                            ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(27): const first = await Promise.allSettled(promises); const results = first; const values = results.map(result => result.value); 1`] = `

  1 | const first = await Promise.allSettled(promises); const results = first; const values = results.map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(27): const first = await Promise.allSettled(promises); const results = first; const values = results.map(result => result.value); 2`] = `

Message:
> 1 | const first = await Promise.allSettled(promises); const results = first; const values = results.map(result => result.value);
    |                                                                                                               ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(28): const values = (await Promise.allSettled(promises)).map(({value}) => value); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(({value}) => value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(28): const values = (await Promise.allSettled(promises)).map(({value}) => value); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(({value}) => value);
    |                                                                      ^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(29): const values = (await Promise.allSettled(promises)).map(({value: settledValue}) => settledValue); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(({value: settledValue}) => settledValue);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(29): const values = (await Promise.allSettled(promises)).map(({value: settledValue}) => settledValue); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(({value: settledValue}) => settledValue);
    |                                                                                    ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(3): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tconst [value] = 1;\n\t\t\tprocess.exit(1);\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 1`] = `

   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			const [value] = 1;
   5 | 			process.exit(1);
   6 | 		} catch {}
   7 | 	}
   8 |
   9 | 	return result.value;
  10 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(3): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tconst [value] = 1;\n\t\t\tprocess.exit(1);\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			const [value] = 1;
   5 | 			process.exit(1);
   6 | 		} catch {}
   7 | 	}
   8 |
>  9 | 	return result.value;
     | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  10 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(3): const values = (results as ReadonlyArray<PromiseSettledResult<string>>).map(result => result.value); 1`] = `

  1 | const values = (results as ReadonlyArray<PromiseSettledResult<string>>).map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(3): const values = (results as ReadonlyArray<PromiseSettledResult<string>>).map(result => result.value); 2`] = `

Message:
> 1 | const values = (results as ReadonlyArray<PromiseSettledResult<string>>).map(result => result.value);
    |                                                                                       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(3): declare const results: PromiseSettledResult<string>[] | PromiseSettledResult<number>[]; const values = results.map(result => result.value); 1`] = `

Filename: file.ts

  1 | declare const results: PromiseSettledResult<string>[] | PromiseSettledResult<number>[]; const values = results.map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(3): declare const results: PromiseSettledResult<string>[] | PromiseSettledResult<number>[]; const values = results.map(result => result.value); 2`] = `

Message:
> 1 | declare const results: PromiseSettledResult<string>[] | PromiseSettledResult<number>[]; const values = results.map(result => result.value);
    |                                                                                                                              ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(30): const values = (await Promise.allSettled(promises)).map(({value = fallback}) => value); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(({value = fallback}) => value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(30): const values = (await Promise.allSettled(promises)).map(({value = fallback}) => value); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(({value = fallback}) => value);
    |                                                           ^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(31): const values = (await Promise.allSettled(promises)).map(({value: {name}}) => name); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(({value: {name}}) => name);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(31): const values = (await Promise.allSettled(promises)).map(({value: {name}}) => name); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(({value: {name}}) => name);
    |                                                           ^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(32): const values = (await Promise.allSettled(promises)).map(({status, value = fallback}) => status === \"fulfilled\" ? value : undefined); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(({status, value = fallback}) => status === "fulfilled" ? value : undefined);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(32): const values = (await Promise.allSettled(promises)).map(({status, value = fallback}) => status === \"fulfilled\" ? value : undefined); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(({status, value = fallback}) => status === "fulfilled" ? value : undefined);
    |                                                                   ^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(33): const values = (await Promise.allSettled(promises)).map(({status, value: {name}}) => status === \"fulfilled\" ? name : undefined); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(({status, value: {name}}) => status === "fulfilled" ? name : undefined);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(33): const values = (await Promise.allSettled(promises)).map(({status, value: {name}}) => status === \"fulfilled\" ? name : undefined); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(({status, value: {name}}) => status === "fulfilled" ? name : undefined);
    |                                                                   ^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(34): const values = (await Promise.allSettled(promises)).map(({status, value}) => { { const status = \"fulfilled\"; return status === \"fulfilled\" ? value : undefined; } }); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(({status, value}) => { { const status = "fulfilled"; return status === "fulfilled" ? value : undefined; } });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(34): const values = (await Promise.allSettled(promises)).map(({status, value}) => { { const status = \"fulfilled\"; return status === \"fulfilled\" ? value : undefined; } }); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(({status, value}) => { { const status = "fulfilled"; return status === "fulfilled" ? value : undefined; } });
    |                                                                                                                                              ^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(35): const values = (await Promise.allSettled(promises)).filter(() => true).map(result => result.value); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).filter(() => true).map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(35): const values = (await Promise.allSettled(promises)).filter(() => true).map(result => result.value); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).filter(() => true).map(result => result.value);
    |                                                                                      ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(36): const values = Promise.allSettled(promises).then(results => results.filter(() => true).map(result => result.value)); 1`] = `

  1 | const values = Promise.allSettled(promises).then(results => results.filter(() => true).map(result => result.value));

`;

exports[`no-unsafe-promise-all-settled-values > invalid(36): const values = Promise.allSettled(promises).then(results => results.filter(() => true).map(result => result.value)); 2`] = `

Message:
> 1 | const values = Promise.allSettled(promises).then(results => results.filter(() => true).map(result => result.value));
    |                                                                                                      ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(37): const values = (await Promise.allSettled(promises)).map(({value}) => ({value})); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(({value}) => ({value}));

`;

exports[`no-unsafe-promise-all-settled-values > invalid(37): const values = (await Promise.allSettled(promises)).map(({value}) => ({value})); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(({value}) => ({value}));
    |                                                                        ^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(38): const values = (await Promise.allSettled(promises)).map(({value}) => ({[value]: fallback})); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(({value}) => ({[value]: fallback}));

`;

exports[`no-unsafe-promise-all-settled-values > invalid(38): const values = (await Promise.allSettled(promises)).map(({value}) => ({[value]: fallback})); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(({value}) => ({[value]: fallback}));
    |                                                                         ^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(39): const values = (await Promise.allSettled(promises)).map(result => result.status === \"fulfilled\" || result.value); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => result.status === "fulfilled" || result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(39): const values = (await Promise.allSettled(promises)).map(result => result.status === \"fulfilled\" || result.value); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(result => result.status === "fulfilled" || result.value);
    |                                                                                                    ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(4): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tnull.value = process.exit(1);\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		try {
  4 | 			null.value = process.exit(1);
  5 | 		} catch {}
  6 | 	}
  7 |
  8 | 	return result.value;
  9 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(4): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tnull.value = process.exit(1);\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		try {
  4 | 			null.value = process.exit(1);
  5 | 		} catch {}
  6 | 	}
  7 |
> 8 | 	return result.value;
    | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  9 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(4): const values = (results as (PromiseFulfilledResult<string> | PromiseRejectedResult)[]).map(result => result.value); 1`] = `

  1 | const values = (results as (PromiseFulfilledResult<string> | PromiseRejectedResult)[]).map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(4): const values = (results as (PromiseFulfilledResult<string> | PromiseRejectedResult)[]).map(result => result.value); 2`] = `

Message:
> 1 | const values = (results as (PromiseFulfilledResult<string> | PromiseRejectedResult)[]).map(result => result.value);
    |                                                                                                      ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(40): const values = (await Promise.allSettled(promises)).map(result => result.status !== \"rejected\" || result.value); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => result.status !== "rejected" || result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(40): const values = (await Promise.allSettled(promises)).map(result => result.status !== \"rejected\" || result.value); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(result => result.status !== "rejected" || result.value);
    |                                                                                                   ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(41): const values = (await Promise.allSettled(promises)).map(result => result.status !== \"fulfilled\" && result.value); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => result.status !== "fulfilled" && result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(41): const values = (await Promise.allSettled(promises)).map(result => result.status !== \"fulfilled\" && result.value); 2`] = `

Message:
> 1 | const values = (await Promise.allSettled(promises)).map(result => result.status !== "fulfilled" && result.value);
    |                                                                                                    ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(42): const values = (await Promise.allSettled(promises)).map(result => {\n\tconsole.log(result.status);\n\treturn result.value;\n}); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	console.log(result.status);
  3 | 	return result.value;
  4 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(42): const values = (await Promise.allSettled(promises)).map(result => {\n\tconsole.log(result.status);\n\treturn result.value;\n}); 2`] = `

Message:
  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	console.log(result.status);
> 3 | 	return result.value;
    | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  4 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(43): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (condition) {\n\t\treturn result.value;\n\t}\n}); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (condition) {
  3 | 		return result.value;
  4 | 	}
  5 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(43): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (condition) {\n\t\treturn result.value;\n\t}\n}); 2`] = `

Message:
  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (condition) {
> 3 | 		return result.value;
    | 		       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  4 | 	}
  5 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(44): const values = (await Promise.allSettled(promises)).map(result => {\n\tconsole.log(result.value);\n\treturn result;\n}); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	console.log(result.value);
  3 | 	return result;
  4 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(44): const values = (await Promise.allSettled(promises)).map(result => {\n\tconsole.log(result.value);\n\treturn result;\n}); 2`] = `

Message:
  1 | const values = (await Promise.allSettled(promises)).map(result => {
> 2 | 	console.log(result.value);
    | 	            ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  3 | 	return result;
  4 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(45): const values = Promise.allSettled(promises).then(results => {\n\treturn results.map(result => {\n\t\treturn result.value;\n\t});\n}); 1`] = `

  1 | const values = Promise.allSettled(promises).then(results => {
  2 | 	return results.map(result => {
  3 | 		return result.value;
  4 | 	});
  5 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(45): const values = Promise.allSettled(promises).then(results => {\n\treturn results.map(result => {\n\t\treturn result.value;\n\t});\n}); 2`] = `

Message:
  1 | const values = Promise.allSettled(promises).then(results => {
  2 | 	return results.map(result => {
> 3 | 		return result.value;
    | 		       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  4 | 	});
  5 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(46): const values = Promise.allSettled(promises).then(results => {\n\tif (condition) {\n\t\treturn results.map(result => result.value);\n\t}\n\n\treturn [];\n}); 1`] = `

  1 | const values = Promise.allSettled(promises).then(results => {
  2 | 	if (condition) {
  3 | 		return results.map(result => result.value);
  4 | 	}
  5 |
  6 | 	return [];
  7 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(46): const values = Promise.allSettled(promises).then(results => {\n\tif (condition) {\n\t\treturn results.map(result => result.value);\n\t}\n\n\treturn [];\n}); 2`] = `

Message:
  1 | const values = Promise.allSettled(promises).then(results => {
  2 | 	if (condition) {
> 3 | 		return results.map(result => result.value);
    | 		                             ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  4 | 	}
  5 |
  6 | 	return [];
  7 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(47): const values = (await Promise.allSettled(promises)).map(result => {\n\tswitch (result.status) {\n\t\tcase \"rejected\":\n\t\t\tconsole.log(result.reason);\n\t\tcase \"fulfilled\":\n\t\t\treturn result.value;\n\t}\n}); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	switch (result.status) {
  3 | 		case "rejected":
  4 | 			console.log(result.reason);
  5 | 		case "fulfilled":
  6 | 			return result.value;
  7 | 	}
  8 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(47): const values = (await Promise.allSettled(promises)).map(result => {\n\tswitch (result.status) {\n\t\tcase \"rejected\":\n\t\t\tconsole.log(result.reason);\n\t\tcase \"fulfilled\":\n\t\t\treturn result.value;\n\t}\n}); 2`] = `

Message:
  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	switch (result.status) {
  3 | 		case "rejected":
  4 | 			console.log(result.reason);
  5 | 		case "fulfilled":
> 6 | 			return result.value;
    | 			       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  7 | 	}
  8 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(48): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tconst value = maybeThrow(), exitCode = process.exit(1);\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		try {
  4 | 			const value = maybeThrow(), exitCode = process.exit(1);
  5 | 		} catch {}
  6 | 	}
  7 |
  8 | 	return result.value;
  9 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(48): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tconst value = maybeThrow(), exitCode = process.exit(1);\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		try {
  4 | 			const value = maybeThrow(), exitCode = process.exit(1);
  5 | 		} catch {}
  6 | 	}
  7 |
> 8 | 	return result.value;
    | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  9 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(49): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\t(maybeThrow(), {})[process.exit(1)];\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		try {
  4 | 			(maybeThrow(), {})[process.exit(1)];
  5 | 		} catch {}
  6 | 	}
  7 |
  8 | 	return result.value;
  9 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(49): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\t(maybeThrow(), {})[process.exit(1)];\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		try {
  4 | 			(maybeThrow(), {})[process.exit(1)];
  5 | 		} catch {}
  6 | 	}
  7 |
> 8 | 	return result.value;
    | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  9 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(5): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tobject.method(process.exit(1));\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		try {
  4 | 			object.method(process.exit(1));
  5 | 		} catch {}
  6 | 	}
  7 |
  8 | 	return result.value;
  9 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(5): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tobject.method(process.exit(1));\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		try {
  4 | 			object.method(process.exit(1));
  5 | 		} catch {}
  6 | 	}
  7 |
> 8 | 	return result.value;
    | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  9 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(5): declare const results: Types.PromiseSettledResult<string>[]; const values = results.map(result => result.value); 1`] = `

  1 | declare const results: Types.PromiseSettledResult<string>[]; const values = results.map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(5): declare const results: Types.PromiseSettledResult<string>[]; const values = results.map(result => result.value); 2`] = `

Message:
> 1 | declare const results: Types.PromiseSettledResult<string>[]; const values = results.map(result => result.value);
    |                                                                                                   ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(6): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\tfalse && process.exit(1);\n\t}\n\n\treturn result.value;\n}); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		false && process.exit(1);
  4 | 	}
  5 |
  6 | 	return result.value;
  7 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(6): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\tfalse && process.exit(1);\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		false && process.exit(1);
  4 | 	}
  5 |
> 6 | 	return result.value;
    | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  7 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(6): declare const results: readonly PromiseSettledResult<string>[]; const values = results.map(result => result.value); 1`] = `

  1 | declare const results: readonly PromiseSettledResult<string>[]; const values = results.map(result => result.value);

`;

exports[`no-unsafe-promise-all-settled-values > invalid(6): declare const results: readonly PromiseSettledResult<string>[]; const values = results.map(result => result.value); 2`] = `

Message:
> 1 | declare const results: readonly PromiseSettledResult<string>[]; const values = results.map(result => result.value);
    |                                                                                                      ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.

`;

exports[`no-unsafe-promise-all-settled-values > invalid(7): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\twhile (condition) {\n\t\t\tprocess.exit(1);\n\t\t}\n\t}\n\n\treturn result.value;\n}); 1`] = `

  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		while (condition) {
  4 | 			process.exit(1);
  5 | 		}
  6 | 	}
  7 |
  8 | 	return result.value;
  9 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(7): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\twhile (condition) {\n\t\t\tprocess.exit(1);\n\t\t}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
  1 | const values = (await Promise.allSettled(promises)).map(result => {
  2 | 	if (result.status !== 'fulfilled') {
  3 | 		while (condition) {
  4 | 			process.exit(1);
  5 | 		}
  6 | 	}
  7 |
> 8 | 	return result.value;
    | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  9 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(8): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tconst value = 1;\n\t\t\tswitch (value) {\n\t\t\t\tdefault:\n\t\t\t\t\tbreak;\n\t\t\t\tcase process.exit(1):\n\t\t\t\t\t{}\n\t\t\t}\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 1`] = `

   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			const value = 1;
   5 | 			switch (value) {
   6 | 				default:
   7 | 					break;
   8 | 				case process.exit(1):
   9 | 					{}
  10 | 			}
  11 | 		} catch {}
  12 | 	}
  13 |
  14 | 	return result.value;
  15 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(8): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tconst value = 1;\n\t\t\tswitch (value) {\n\t\t\t\tdefault:\n\t\t\t\t\tbreak;\n\t\t\t\tcase process.exit(1):\n\t\t\t\t\t{}\n\t\t\t}\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			const value = 1;
   5 | 			switch (value) {
   6 | 				default:
   7 | 					break;
   8 | 				case process.exit(1):
   9 | 					{}
  10 | 			}
  11 | 		} catch {}
  12 | 	}
  13 |
> 14 | 	return result.value;
     | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  15 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(9): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tconst value = 1;\n\t\t\tswitch (value) {\n\t\t\t\tcase 2:\n\t\t\t\t\tprocess.exit(1);\n\t\t\t}\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 1`] = `

   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			const value = 1;
   5 | 			switch (value) {
   6 | 				case 2:
   7 | 					process.exit(1);
   8 | 			}
   9 | 		} catch {}
  10 | 	}
  11 |
  12 | 	return result.value;
  13 | });

`;

exports[`no-unsafe-promise-all-settled-values > invalid(9): const values = (await Promise.allSettled(promises)).map(result => {\n\tif (result.status !== 'fulfilled') {\n\t\ttry {\n\t\t\tconst value = 1;\n\t\t\tswitch (value) {\n\t\t\t\tcase 2:\n\t\t\t\t\tprocess.exit(1);\n\t\t\t}\n\t\t} catch {}\n\t}\n\n\treturn result.value;\n}); 2`] = `

Message:
   1 | const values = (await Promise.allSettled(promises)).map(result => {
   2 | 	if (result.status !== 'fulfilled') {
   3 | 		try {
   4 | 			const value = 1;
   5 | 			switch (value) {
   6 | 				case 2:
   7 | 					process.exit(1);
   8 | 			}
   9 | 		} catch {}
  10 | 	}
  11 |
> 12 | 	return result.value;
     | 	       ^^^^^^^^^^^^ Do not read \`.value\` from \`Promise.allSettled()\` results without checking that the result is fulfilled.
  13 | });

`;
